<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Pista"
    tools:context=".buttonContainer">

    <Button
        android:id="@+id/button21"
        android:layout_width="135dp"
        android:layout_height="91dp"
        android:layout_marginStart="2dp"
        android:text="@string/Button5"
        android:backgroundTint="@color/Mehndi"
        app:layout_constraintStart_toEndOf="@+id/button17"
        app:layout_constraintTop_toBottomOf="@+id/button18" />

    <Button
        android:id="@+id/button20"
        android:layout_width="135dp"
        android:layout_height="92dp"
        android:text="@string/Button4"
        android:backgroundTint="@color/Mehndi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button17" />

    <Button
        android:id="@+id/button22"
        android:layout_width="135dp"
        android:layout_height="91dp"
        android:layout_marginStart="2dp"
        android:text="@string/Button6"
        android:backgroundTint="@color/Mehndi"
        app:layout_constraintStart_toEndOf="@+id/button18"
        app:layout_constraintTop_toBottomOf="@+id/button19" />

    <Button
        android:id="@+id/button17"
        android:layout_width="135dp"
        android:layout_height="92dp"
        android:text="@string/Button1"
        android:backgroundTint="@color/Mehndi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button18"
        android:layout_width="135dp"
        android:layout_height="91dp"
        android:layout_marginStart="2dp"
        android:text="@string/Button2"
        android:backgroundTint="@color/Mehndi"
        app:layout_constraintStart_toEndOf="@+id/button17"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button19"
        android:layout_width="135dp"
        android:layout_height="91dp"
        android:layout_marginStart="2dp"
        android:text="@string/Button3"
        android:backgroundTint="@color/Mehndi"
        app:layout_constraintStart_toEndOf="@+id/button18"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/wayToGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/ImplicitIntent"
        android:backgroundTint="@color/Mehndi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button21" />

</androidx.constraintlayout.widget.ConstraintLayout>