<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layouts.linearActivityVertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/firstView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CDDC39"
            android:gravity="center"
            android:text="@string/hello_this_is_first_view"
            android:textColor="@color/purple_700" />

        <TextView
            android:id="@+id/secondView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4CAF50"
            android:gravity="center"
            android:text="@string/i_am_kutta_gora_one"
            android:textColorHighlight="#009688"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/thirdView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:gravity="center"
            android:text="@string/my_last_view"
            android:textSize="25sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>